[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/EvilPumpkin.gd" type="Script" id=1]
[ext_resource path="res://assets/evil_pumpkin.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 208.015
height = 100.113

[node name="EvilPumpkin" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.49293 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2( 24.1398, 3.13768 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )
enabled = true

[node name="UpRayCast" type="RayCast2D" parent="."]
position = Vector2( 1.13687e-13, 19.894 )
rotation = 3.14159
scale = Vector2( 1.75, 0.75 )
enabled = true

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2( -24.0173, 4.25224 )
rotation = -1.5708
scale = Vector2( 1.75, 1 )
enabled = true

[node name="DownRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, -12.918 )
scale = Vector2( 1.75, 0.75 )
enabled = true

[node name="TLRayCast" type="RayCast2D" parent="."]
position = Vector2( 8.35216, 13.8089 )
rotation = 2.35619
scale = Vector2( 1.75, 0.75 )
enabled = true

[node name="BLRayCast" type="RayCast2D" parent="."]
position = Vector2( 7.12719, -7.23856 )
rotation = 0.785398
scale = Vector2( 1.75, 0.75 )
enabled = true

[node name="TRRayCast" type="RayCast2D" parent="."]
position = Vector2( -7.79538, 13.9203 )
rotation = -2.35619
scale = Vector2( 1.75, 0.75 )
enabled = true

[node name="BRRayCast" type="RayCast2D" parent="."]
position = Vector2( -7.79536, -6.01357 )
rotation = -0.785398
scale = Vector2( 1.75, 0.75 )
enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_delete_pumpkin"]
